# achievement-tracker

./: .coverage  .pylintrc  README.md  app.py  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: main.yml  python-app.yml
data/: data.csv
modules/: __init__.py  achievement.py
tests/: test_main.py
