[metadata]
name = achievement-tracker-sgchopkins8043
version = 0.0.1
author = Simon Hopkins
author_email = sgchopkins8043@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =

packages = find:
python_requires = >=3.8

[options.packages.find]
where = .